--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,10 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
     margin: 20px auto;
     width: 80%;
-    max-width: 80%;
-}
-
-nav li {
-    display: inline;
-    margin: 0 20px;
-    font-size: 17px;
+    max-width: 1600px;
 }
 
 nav h2 {
@@ -33,11 +28,17 @@ nav h2:hover span {
     color: white;
 }
 
+nav li {
+    display: inline;
+    margin: 0 20px;
+    font-size: 17px;
+}
+
 section {
     display: flex;
     margin: auto;
     width: 80%;
-    vertical-align: center;
+    max-width: 1600px;
 }
 
 h1 {
@@ -51,11 +52,11 @@ a, a:active, a:visited {
 }
 
 a:hover {
-    color: lightblue;
+    color: #add8e6;
 }
 
 a.current-anchor {
-    color: lightblue;
+    color: #add8e6;
     transition: 200ms linear;
 }
 
@@ -66,6 +67,7 @@ a.current-anchor:hover {
 .intro {
     justify-content: space-around;
     align-items: center;
+    margin-top: 10vh;
     height: 50vh;
     max-height: 50vh;
 }
@@ -79,14 +81,13 @@ a.current-anchor:hover {
 }
 
 #intro-image {
-    border-radius: 50%;
-    width: auto;
-    max-width: 300px;
+    width: 25vw;
+    max-width: 400px;
     height: auto;
 }
 
 .text-fancy {
-    color: lightblue;
+    color: #add8e6;
 }
 
 .no-bullets {
@@ -97,6 +98,6 @@ a.current-anchor:hover {
     display: inline;
 }
 
-.test-border {
+.test {
     border: 1px solid red;
 }
