--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,15 @@
     font-family:'Courier New', Courier, monospace;
 }
 
+#overlay {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #13171a;
+    z-index: 1;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -64,12 +73,18 @@ a.current-anchor:hover {
     color: white
 }
 
-.intro {
+#intro {
     justify-content: space-around;
     align-items: center;
     margin-top: 10vh;
     height: 50vh;
     max-height: 50vh;
+}
+
+#intro-image {
+    width: 25vw;
+    max-width: 400px;
+    height: auto;
 }
 
 .intro h1 {
@@ -80,12 +95,8 @@ a.current-anchor:hover {
     margin-right: 10%;
 }
 
-#intro-image {
-    width: 25vw;
-    max-width: 400px;
-    height: auto;
-}
 
+/* --- helpful tools --- */
 .text-fancy {
     color: #add8e6;
 }
@@ -98,6 +109,49 @@ a.current-anchor:hover {
     display: inline;
 }
 
+.visible {
+    opacity: 1;
+}
+
 .test {
     border: 1px solid red;
+}
+
+
+/* --- animations --- */
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+}
+
+.reveal-text-line {
+    overflow: hidden;
+    border-right: 4px solid #add8e6;
+    white-space: nowrap;
+    letter-spacing: 0.15em;
+    animation-name: reveal;
+    animation-duration: 1.2s;
+    animation-timing-function: ease-in-out;
+}
+
+.hide-text-line {
+    overflow: hidden;
+    border-right: 4px solid #add8e6;
+    white-space: nowrap;
+    letter-spacing: 0.15em;
+    animation-name: hide;
+    animation-duration: 1.2s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes reveal {
+    0% { width: 43% }
+    60% { width: 100% }
+    100% { width: 100% }
+}
+
+@keyframes hide {
+    0% { width: 100% }
+    60% { width: 43% }
+    100% { width: 43% }
 }
