--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,6 @@
     font-family:'Courier New', Courier, monospace;
 }
 
-#overlay {
-    position: fixed;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: #13171a;
-    z-index: 1;
-}
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -85,6 +76,7 @@ a.current-anchor:hover {
     width: 25vw;
     max-width: 400px;
     height: auto;
+    border-radius: 50%;
 }
 
 .intro h1 {
@@ -119,41 +111,12 @@ a.current-anchor:hover {
 
 
 /* --- animations --- */
-.fade-out {
+.fade-in {
     opacity: 0;
     transition: opacity 0.5s ease-out;
 }
-/*
-.reveal-text-line {
-    overflow: hidden;
-    border-right: 4px solid #add8e6;
-    white-space: nowrap;
-    letter-spacing: 0.15em;
-    animation-name: reveal;
-    animation-duration: 1.2s;
-    animation-timing-function: ease-in-out;
-}
 
-.hide-text-line {
-    overflow: hidden;
-    border-right: 4px solid #add8e6;
-    white-space: nowrap;
-    letter-spacing: 0.15em;
-    animation-name: hide;
-    animation-duration: 1.2s;
-    animation-timing-function: ease-in-out;
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
-
-@keyframes reveal {
-    0% { width: 43% }
-    60% { width: 100% }
-    100% { width: 100% }
-}
-
-@keyframes hide {
-    0% { width: 100% }
-    60% { width: 43% }
-    100% { width: 43% }
-}
-
-*/
