--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     scrollbar-width: none;
     background-color: #13171a;
     color: white;
@@ -42,7 +44,16 @@ section {
 }
 
 h1 {
+    margin: 20px 0;
     font-size: 50px;
+}
+
+h2 {
+    margin: 15px 0;
+}
+
+p {
+    margin: 10px 0;
 }
 
 a, a:active, a:visited {
@@ -61,7 +72,7 @@ a.current-anchor {
 }
 
 a.current-anchor:hover {
-    color: white
+    color: white;
 }
 
 #intro {
@@ -79,14 +90,27 @@ a.current-anchor:hover {
     border-radius: 50%;
 }
 
-.intro h1 {
-    margin-bottom: auto;
-}
-
 .intro-text {
     margin-right: 10%;
 }
 
+.grid-container {
+    display: grid;
+    gap: 5px;
+} 
+
+.button {
+    display: block;
+    width: 115px;
+    height: 30px;
+    background: #4E9CAF;
+    text-align: center;
+    border: 0.7px solid white;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    line-height: 30px;
+}
 
 /* --- helpful tools --- */
 .text-fancy {
@@ -109,14 +133,40 @@ a.current-anchor:hover {
     border: 1px solid red;
 }
 
-
 /* --- animations --- */
 .fade-in {
-    opacity: 0;
-    transition: opacity 0.5s ease-out;
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 1s; /* Firefox < 16 */
+    -ms-animation: fadein 1s; /* Internet Explorer */
+    -o-animation: fadein 1s; /* Opera < 12.1 */
+    animation: fadein 1s;
 }
 
-@keyframes fadeIn {
+@keyframes fadein {
     from { opacity: 0; }
-    to { opacity: 1; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
