--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
     scrollbar-width: none;
     background-color: #13171a;
     color: white;
@@ -12,7 +13,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: -webkit-sticky; /* Safari */
     position: sticky;
+    top: 0;
     margin: 20px auto;
     width: 80%;
     max-width: 1600px;
@@ -41,6 +44,11 @@ section {
     margin: auto;
     width: 80%;
     max-width: 1600px;
+}
+
+.section-title {
+    margin: 10vh auto 5vh auto;
+    text-align: center;
 }
 
 h1 {
@@ -78,9 +86,8 @@ a.current-anchor:hover {
 #intro {
     justify-content: space-around;
     align-items: center;
-    margin-top: 10vh;
-    height: 50vh;
-    max-height: 50vh;
+    margin: 10vh auto;
+    height: 60vh;
 }
 
 #intro-image {
@@ -94,11 +101,6 @@ a.current-anchor:hover {
     margin-right: 10%;
 }
 
-.grid-container {
-    display: grid;
-    gap: 5px;
-} 
-
 .button {
     display: block;
     width: 115px;
@@ -110,6 +112,53 @@ a.current-anchor:hover {
     color: white;
     font-weight: bold;
     line-height: 30px;
+}
+
+#arrowdown {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    
+}
+
+#portfolio {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: auto;
+}
+
+.portfolio-item {
+    display: flex;
+    width: 100%;
+    margin: 5vh auto;
+}
+
+.portfolio-text {
+    width: 40%;
+    padding: 10% 0;
+    margin: auto;
+    text-align: center;
+    background-color: #2a2e30;
+}
+
+.portfolio-text h2, .portfolio-text p {
+    background-color: #2a2e30;
+}
+
+.portfolio-img {
+    width: 25vw;
+    max-width: 400px;
+    height: auto;
+    margin: auto;
+}
+
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5vh 0;
 }
 
 /* --- helpful tools --- */
@@ -127,6 +176,10 @@ a.current-anchor:hover {
 
 .visible {
     opacity: 1;
+}
+
+.invisible {
+    opacity: 0;
 }
 
 .test {
