--- a/styles.css
+++ b/styles.css
@@ -153,12 +153,11 @@ a.current-anchor:hover {
     margin: auto;
 }
 
-
 footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 5vh 0;
+    padding: 2vh 0;
 }
 
 /* --- helpful tools --- */
