--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,13 +64,13 @@ p {
     margin: 10px 0;
 }
 
-a, a:active, a:visited {
+a, a:active, a:visited, i {
     text-decoration: none;
     color: inherit;
     transition: 200ms linear;
 }
 
-a:hover {
+a:hover, i:hover {
     color: #add8e6;
 }
 
@@ -97,8 +97,23 @@ a.current-anchor:hover {
     border-radius: 50%;
 }
 
-.intro-text {
+#intro-text {
     margin-right: 10%;
+}
+
+#intro-icons {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#intro-icons .link-icons a {
+    margin: 0 15px;
+}
+
+#intro-icons .link-icons a:last-of-type {
+    margin: 0 0 0 15px;
 }
 
 .button {
@@ -118,7 +133,6 @@ a.current-anchor:hover {
     display: flex;
     justify-content: center;
     margin: auto;
-    
 }
 
 #portfolio {
@@ -157,7 +171,12 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 25px;
     padding: 2vh 0;
+}
+
+footer p {
+    margin: 0 15px 0 15px;
 }
 
 /* --- helpful tools --- */
@@ -221,4 +240,52 @@ footer {
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.float {
+    -webkit-animation: floating 3s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: floating 3s; /* Firefox < 16 */
+    -ms-animation: floating 3s; /* Internet Explorer */
+    -o-animation: floating 3s; /* Opera < 12.1 */
+    animation: floating 3s ease-in-out infinite;
+    transform: translateY(0px);
+}
+
+/* Firefox < 16 */
+@-moz-keyframes floating {
+    0%   { transform: translateY(0px); }
+    50%  { transform: translateY(-20px); }
+    100% { transform: translateY(0px); }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes floating {
+    0%   { transform: translateY(0px); }
+    50%  { transform: translateY(-20px); }
+    100% { transform: translateY(0px); }
+}
+
+/* Internet Explorer */
+@-ms-keyframes floating {
+    0%   { transform: translateY(0px); }
+    50%  { transform: translateY(-20px); }
+    100% { transform: translateY(0px); }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes floating {
+    0%   { transform: translateY(0px); }
+    50%  { transform: translateY(-20px); }
+    100% { transform: translateY(0px); }
+}
+
+@keyframes floating {
+    0%   { transform: translateY(0px); }
+    50%  { transform: translateY(-20px); }
+    100% { transform: translateY(0px); }
 }
