--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,447 +1,1 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    background-color: #13171a;
-    color: white;
-    font-family:'Courier New', Courier, monospace;
-}
-
-/* --- Generic Styles --- */
-section {
-    display: flex;
-    margin: auto;
-    width: 80%;
-    max-width: 1600px;
-}
-
-.section-title {
-    margin: 10vh auto 5vh auto;
-    text-align: center;
-}
-
-h1 {
-    margin: 20px 0;
-    font-size: 50px;
-}
-
-h2 {
-    margin: 15px 0;
-}
-
-p {
-    margin: 10px 0;
-}
-
-a, a:active, a:visited, i {
-    text-decoration: none;
-    color: inherit;
-    transition: 150ms linear;
-}
-
-a:hover {
-    color: #add8e6;
-}
-
-a.current-anchor {
-    color: #add8e6;
-    transition: 150ms linear;
-}
-
-a.current-anchor:hover {
-    color: white;
-}
-
-a.reverse-color, a:active.reverse-color, a:visited.reverse-color {
-    color: #add8e6;
-    transition: 150ms linear;
-}
-
-a:hover.reverse-color {
-    color: white;
-}
-
-.text-fancy {
-    color: #add8e6;
-}
-
-.no-bullets {
-    list-style-type: none;
-}
-
-.test {
-    border: 1px solid red;
-}
-
-/* --- Nav Section ---*/
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    top: 0;
-    margin: 20px auto;
-    width: 80%;
-    max-width: 1600px;
-}
-
-nav h2 {
-    margin: 20px auto;
-}
-
-nav h2 span {
-    transition: 150ms linear;
-}
-
-nav h2:hover span {
-    color: white;
-}
-
-nav li {
-    display: inline;
-    margin: 0 20px;
-    font-size: 17px;
-}
-
-/* --- Intro/Landing Section --- */
-#intro-icons {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.link-icons a {
-    margin: 0 15px;
-}
-
-.link-icons a:last-of-type {
-    margin: 0 0 0 15px;
-}
-
-.button {
-    display: block;
-    width: 115px;
-    height: 30px;
-    text-align: center;
-    border: 0.7px solid white;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    line-height: 30px;
-}
-
-.button:hover {
-    border: 0.7px solid #add8e6;
-}
-
-#arrowdown {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-}
-
-/* Hello font-size for XLarge Screens (Desktop) */
-@media only screen and (min-width: 1025px) {
-    #intro-hi {
-        font-size: 60px;
-    }
-}
-
-/* Hello font-size for Large and Medium Screens (Desktop and Tablet) */
-@media only screen and (min-width: 786px) and (max-width: 1024px) {
-    #intro-hi {
-        font-size: 50px;
-    }
-}
-
-/* Large and Medium Screens (Desktop and Tablet) */
-@media only screen and (min-width: 786px) {
-    #intro {
-        justify-content: space-around;
-        align-items: center;
-        margin: 10vh auto;
-        height: 60vh;
-    }
-
-    #intro-image {
-        width: 25vw;
-        max-width: 400px;
-        height: auto;
-        border-radius: 50%;
-    }
-
-    #intro-text {
-        margin-right: 5%;
-    }
-}
-
-/* Medium Screens (Tablet) */
-@media only screen and (min-width: 577px) and (max-width: 786px) {
-    #intro {
-        justify-content: flex-end;
-        align-items: center;
-        flex-direction: column-reverse;
-        margin: 10vh auto;
-        height: 60vh;
-        border: 2px solid red;
-    }
-
-    #intro-image {
-        width: 50%;
-        height: auto;
-        border-radius: 50%;
-    }
-
-    #intro-hi {
-        font-size: 40px;
-    }
-}
-
-/* Small Screens (Small Tablets) */
-@media only screen and (min-width: 459px) and (max-width: 576px) {
-    #intro {
-        justify-content: flex-end;
-        align-items: center;
-        flex-direction: column-reverse;
-        margin: 10vh auto;
-        height: 60vh;
-    }
-
-    #intro-image {
-        width: 60%;
-        height: auto;
-        border-radius: 50%;
-    }
-
-    #intro-hi {
-        font-size: 40px;
-    }
-}
-
-/* Title font-size for All Screens Until Small Screens (Small Mobile) */
-@media only screen and (min-width: 459px) {
-    #intro-title {
-        font-size: 20px;
-    }  
-}
-
-/* Small Screens (Small Mobile) */
-@media only screen and (max-width: 458px) {
-    p {
-        font-size: 15px;
-    }
-
-    #intro {
-        justify-content: flex-end;
-        align-items: center;
-        flex-direction: column-reverse;
-        margin: 10vh auto;
-        height: 60vh;
-    }
-
-    #intro-image {
-        width: 60%;
-        height: auto;
-        border-radius: 50%;
-    }
-
-    #intro-hi {
-        font-size: 35px;
-    }
-
-    #intro-title {
-        font-size: 17px;
-    }
-
-    #intro-icons .link-icons a {
-        margin: 0 7px;
-    }
-
-    #intro-icons .link-icons a:last-of-type {
-        margin: 0 0 0 7px;
-    }
-}
-
-/* --- Portfolio Section --- */
-.portfolio-text * {
-    background-color: #2a2e30;
-}
-
-.portfolio-text h2, .portfolio-text h3, .portfolio-text p {
-    padding: 0 15px;
-}
-
-.portfolio-text h2 {
-    color: #add8e6;
-}
-
-.portfolio-icons {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin-top: 15px;
-}
-
-/* Large Screens (Desktops) */
-@media only screen and (min-width: 1025px) {
-    #portfolio {
-        align-items: center;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        height: auto;
-    }
-    
-    .portfolio-item {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        margin: 5vh auto;
-    }
-
-    .portfolio-text {
-        width: 30%;
-        padding: 10% 0;
-        margin: auto;
-        text-align: center;
-        background-color: #2a2e30;
-    }
-
-    .portfolio-img {
-        width: 50vw;
-        max-width: 800px;
-        height: auto;
-    }
-}
-
-/* All Small Screens (Tablets and Mobile) */
-@media only screen and (max-width: 1024px) {
-    #portfolio {
-        align-items: center;
-        justify-content: space-between;
-        flex-direction: column;
-        flex-wrap: wrap;
-        height: auto;
-    }
-    
-    .portfolio-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        margin: 5vh auto;
-    }
-
-    .portfolio-text {
-        width: 100%;
-        padding: 2% 0;
-        margin-bottom: 3vh;
-        text-align: center;
-        background-color: #2a2e30;
-    }
-
-    .portfolio-img {
-        width: 100%;
-        height: auto;
-    }
-}
-
-/* --- Footer Section --- */
-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 25px;
-    padding: 2vh 0;
-}
-
-footer p {
-    margin: 0 15px 0 15px;
-}
-
-/* --- animations --- */
-.fade-in {
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 1s; /* Firefox < 16 */
-    -ms-animation: fadein 1s; /* Internet Explorer */
-    -o-animation: fadein 1s; /* Opera < 12.1 */
-    animation: fadein 1s;
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-.float {
-    -webkit-animation: floating 3s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: floating 3s; /* Firefox < 16 */
-    -ms-animation: floating 3s; /* Internet Explorer */
-    -o-animation: floating 3s; /* Opera < 12.1 */
-    animation: floating 3s ease-in-out infinite;
-    transform: translateY(0px);
-}
-
-/* Firefox < 16 */
-@-moz-keyframes floating {
-    0%   { transform: translateY(0px); }
-    50%  { transform: translateY(-20px); }
-    100% { transform: translateY(0px); }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes floating {
-    0%   { transform: translateY(0px); }
-    50%  { transform: translateY(-20px); }
-    100% { transform: translateY(0px); }
-}
-
-/* Internet Explorer */
-@-ms-keyframes floating {
-    0%   { transform: translateY(0px); }
-    50%  { transform: translateY(-20px); }
-    100% { transform: translateY(0px); }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes floating {
-    0%   { transform: translateY(0px); }
-    50%  { transform: translateY(-20px); }
-    100% { transform: translateY(0px); }
-}
-
-@keyframes floating {
-    0%   { transform: translateY(0px); }
-    50%  { transform: translateY(-20px); }
-    100% { transform: translateY(0px); }
-}
+*{box-sizing:border-box;margin:0;padding:0;scroll-behavior:smooth;scrollbar-width:none;background-color:#13171a;color:#fff;font-family:'Courier New',Courier,monospace}section{display:flex;margin:auto;width:80%;max-width:1600px}.section-title{margin:10vh auto 5vh;text-align:center}h1{margin:20px 0;font-size:50px}h2{margin:15px 0}p{margin:10px 0}a,a:active,a:visited,i{text-decoration:none;color:inherit;transition:150ms linear}a:hover{color:#add8e6}a.current-anchor{color:#add8e6;transition:150ms linear}a.current-anchor:hover{color:#fff}a.reverse-color,a:active.reverse-color,a:visited.reverse-color{color:#add8e6;transition:150ms linear}a:hover.reverse-color{color:#fff}.text-fancy{color:#add8e6}.no-bullets{list-style-type:none}.test{border:1px solid red}nav{display:flex;justify-content:space-between;align-items:center;top:0;margin:20px auto;width:80%;max-width:1600px}nav h2{margin:20px auto}nav h2 span{transition:150ms linear}nav h2:hover span{color:#fff}nav li{display:inline;margin:0 20px;font-size:17px}#intro-icons{margin-top:20px;display:flex;flex-direction:row;justify-content:space-between}.link-icons a{margin:0 15px}.link-icons a:last-of-type{margin:0 0 0 15px}.button{display:block;width:115px;height:30px;text-align:center;border:.7px solid #fff;border-radius:5px;color:#fff;font-weight:700;line-height:30px}.button:hover{border:.7px solid #add8e6}#arrowdown{display:flex;justify-content:center;margin:auto}@media only screen and (min-width: 1025px){#intro-hi{font-size:60px}}@media only screen and (min-width: 786px) and (max-width: 1024px){#intro-hi{font-size:50px}}@media only screen and (min-width: 786px){#intro{justify-content:space-around;align-items:center;margin:10vh auto;height:60vh}#intro-image{width:25vw;max-width:400px;height:auto;border-radius:50%}#intro-text{margin-right:5%}}@media only screen and (min-width: 577px) and (max-width: 786px){#intro{justify-content:flex-end;align-items:center;flex-direction:column-reverse;margin:10vh auto;height:60vh}#intro-image{width:60%;height:auto;border-radius:50%}#intro-hi{font-size:40px}}@media only screen and (min-width: 459px) and (max-width: 576px){#intro{justify-content:flex-end;align-items:center;flex-direction:column-reverse;margin:10vh auto;height:60vh}#intro-image{width:70%;height:auto;border-radius:50%}#intro-hi{font-size:40px}}@media only screen and (min-width: 459px){#intro-title{font-size:20px}}@media only screen and (max-width: 458px){p{font-size:15px}#intro{justify-content:flex-end;align-items:center;flex-direction:column-reverse;margin:10vh auto;height:60vh}#intro-image{width:80%;height:auto;border-radius:50%}#intro-hi{font-size:35px}#intro-title{font-size:17px}#intro-icons .link-icons a{margin:0 7px}#intro-icons .link-icons a:last-of-type{margin:0 0 0 7px}}.portfolio-text *{background-color:#2a2e30}.portfolio-text h2,.portfolio-text h3,.portfolio-text p{padding:0 15px}.portfolio-text h2{color:#add8e6}.portfolio-icons{display:flex;justify-content:center;width:100%;margin-top:15px}@media only screen and (min-width: 1025px){#portfolio{align-items:center;justify-content:space-between;flex-wrap:wrap;height:auto}.portfolio-item{display:flex;align-items:center;width:100%;margin:5vh auto}.portfolio-text{width:30%;padding:10% 0;margin:auto;text-align:center;background-color:#2a2e30}.portfolio-img{width:50vw;max-width:800px;height:auto}}@media only screen and (max-width: 1024px){#portfolio{align-items:center;justify-content:space-between;flex-direction:column;flex-wrap:wrap;height:auto}.portfolio-item{display:flex;flex-direction:column;align-items:center;width:100%;margin:5vh auto}.portfolio-text{width:100%;padding:2% 0;margin-bottom:3vh;text-align:center;background-color:#2a2e30}.portfolio-img{width:100%;height:auto}}footer{display:flex;justify-content:center;align-items:center;margin-bottom:25px;padding:2vh 0}footer p{margin:0 15px}.fade-in{-webkit-animation:fadein 1s;-moz-animation:fadein 1s;-ms-animation:fadein 1s;-o-animation:fadein 1s;animation:fadein 1s}@keyframes fadein{from{opacity:0}to{opacity:1}}@-moz-keyframes fadein{from{opacity:0}to{opacity:1}}@-webkit-keyframes fadein{from{opacity:0}to{opacity:1}}@-ms-keyframes fadein{from{opacity:0}to{opacity:1}}@-o-keyframes fadein{from{opacity:0}to{opacity:1}}@keyframes fadein{from{opacity:0}to{opacity:1}}.float{-webkit-animation:floating 3s;-moz-animation:floating 3s;-ms-animation:floating 3s;-o-animation:floating 3s;animation:floating 3s ease-in-out infinite;transform:translateY(0px)}@-moz-keyframes floating{0%{transform:translateY(0px)}50%{transform:translateY(-20px)}100%{transform:translateY(0px)}}@-webkit-keyframes floating{0%{transform:translateY(0px)}50%{transform:translateY(-20px)}100%{transform:translateY(0px)}}@-ms-keyframes floating{0%{transform:translateY(0px)}50%{transform:translateY(-20px)}100%{transform:translateY(0px)}}@-o-keyframes floating{0%{transform:translateY(0px)}50%{transform:translateY(-20px)}100%{transform:translateY(0px)}}@keyframes floating{0%{transform:translateY(0px)}50%{transform:translateY(-20px)}100%{transform:translateY(0px)}}
